# week3-ml-baseline-system

./: .gitignore  README.md  pyproject.toml
models/registry/: latest.txt
models/runs/2025-12-29T18-16-18Z__clf__session42/env/: env_meta.json
models/runs/2025-12-29T18-16-18Z__clf__session42/model/: model.pkl
models/runs/2025-12-29T18-16-18Z__clf__session42/schema/: input_schema.json
notebooks/: Cars_Classification.ipynb  Cars_Regression.ipynb  Shipping_Crisis_Template.ipynb  Shipping_Crisis_Template2.ipynb
notebooks/AutogluonModels/ag-20251231_214925/: metadata.json
notebooks/AutogluonModels/ag-20260101_132747/models/XGBoost/: xgb.ubj
notebooks/AutogluonModels/ag-20260101_143939/: metadata.json
notebooks/AutogluonModels/ag-20260101_145112/models/XGBoost/: xgb.ubj
notebooks/AutogluonModels/ag-20260103_160440/: metadata.json
notebooks/AutogluonModels/ag-20260103_160534/models/XGBoost/: xgb.ubj
notebooks/AutogluonModels/ag-20260103_165334/models/XGBoost/: xgb.ubj
notebooks/AutogluonModels/ag-20260103_174013/: metadata.json
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
reports/: model_card.md
src/ml_baseline/: cli.py  config.py  io_utils.py  sample_data.py  train.py
