[project]
name = "ml-baseline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "pyarrow",
    "typer",
    "numpy",
    "scikit-learn>=1.8.0",
    "joblib>=1.5.3",
]

[project.scripts]
ml-baseline = "ml_baseline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_baseline"]
